# realestatecrm

./: .env.example  .eslintrc.json  .gitignore  .vercelignore  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_AI.md  CLAUDE.md  DB_CONVENTIONS.md  DECISIONS.md  ENVIRONMENT.md  PLAN.md  PRODUCT_SCOPE.md  PROMPTS_AND_SCORING.md  README.md  REPOSITORY_OVERVIEW.md  ROADMAP.md  SECURITY.md  STYLESHEET.md  TESTING.md  WORKFLOW_BOUNDARIES.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  vercel.json  vitest.config.mts  vitest.config.ts
agent/: CUTOVER_PLAN.md  MIGRATION_GAP.md  chippi.py  config.py  db.py  modal_app.py  orchestrator.py  pyproject.toml  sandbox_runner.py  schemas.py
agent/agents/: coordinator.py  cowork.py  deal_sentinel.py  lead_nurture.py  lead_scorer.py  long_term_nurture.py  offer_agent.py  tour_followup.py
agent/memory/: store.py
agent/security/: budget.py  context.py  guardrails.py
agent/specialists/: coordinator.py  deal_sentinel.py  offer_agent.py
agent/tools/: __init__.py  activities.py  attachments.py  brief.py  contacts.py  deals.py  drafts.py  goals.py  inbound.py  memory_tools.py  outcome.py  outreach.py  portfolio.py  priority.py  properties.py  questions.py  routing.py  streaming.py  tours.py  write.py
app/: actions.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  slug-form.tsx  subdomain-form.tsx
components/: amplitude-provider.tsx  brand-logo.tsx  form-unavailable.tsx  heroui-provider.tsx  nav-menu.tsx  navbar.tsx  platform-banner.tsx  providers.tsx  (+4 more)
(+1267 files in other folders)
