[project]
name = "chippi-agent"
version = "0.1.0"
description = "Chippi background AI agent — Modal + OpenAI Agents SDK"
requires-python = ">=3.12"

dependencies = [
  "openai-agents>=0.0.15",
  "openai>=1.75.0",
  "supabase>=2.15.0",
  "asyncpg>=0.30.0",
  "pydantic>=2.11.0",
  "httpx>=0.28.0",
  "upstash-redis>=1.3.0",
  "python-dotenv>=1.1.0",
  "modal>=0.73.0",
  "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
